yeah very happy with the final version of the germ free figure

--- a/scripts/R33_germfree.Rmd
+++ b/scripts/R33_germfree.Rmd
@@ -15,6 +15,7 @@ library(ggrepel)
 library(scales)
 library(patchwork)
 library(ggpubr)
+library(cowplot)
 ```
 # design
 
@@ -126,7 +127,6 @@ design
 #ggsave('../data/R33_gf_design_new.pdf', width = 10)
 ```
 
-
 # the CFU
 
 for this figure:
@@ -187,13 +187,31 @@ no_gavage_culturing_48 <- tibble(
 # add the repeat experiment data 
 repeat_data <- read_csv("../data/8_13_25_germ_free_faecalis_gavage_repeat - sheet1.csv") %>% 
   mutate(CFUs_per_GramStool = (((((Colonies_counted*(100/Plated_volume_ul))/100)/(10^Dilution_factor) )*1000)/Stool_weight_mg)+1)  %>%
-  mutate(log10_CFUs_per_GramStool = log10(CFUs_per_GramStool)) %>% 
-  mutate(experiment_no = 2)
+  mutate(log10_CFUs_per_GramStool = log10(CFUs_per_GramStool)) 
+
+## add the pre-innoculation (hour 0) enterococcus abundance (0 from bhi anaerobic culturing)  for the repeat experiment
+baseline_data_repeat <- tibble(
+  # The 'Time Point' is the same for all baseline measurements.
+  `Time Point` = rep("0h (pre-innoculation)", 5),
+  
+  # A vector containing the unique group IDs for each of the 10 mice.
+  `Mouse Group` = c("1-1", "1-3", "1-10", 
+                    "2-1", "2-3"),
+                    
+  # The notes column specifies the source of the germ-free confirmation.
+  Notes = rep("BHI anaerobic culturing", 5),
+  
+  # The CFU/gram is set to 1, representing the limit of detection (no growth).
+  `CFUs_per_GramStool` = rep(1, 5),
+  
+  # The log10 of 1 is 0.
+  `log10_CFUs_per_GramStool` = rep(0, 5)
+)
 
 
 all_raw <- bind_rows(
   bind_rows(baseline_data, raw_data , no_gavage_culturing_48) %>% mutate(experiment_no = 1, Total_weight_stool_and_tube_mg = as.numeric(Total_weight_stool_and_tube_mg)),
-  repeat_data
+  bind_rows(baseline_data_repeat, repeat_data )%>% mutate(experiment_no = 2)
 ) %>% 
   mutate(mouse_identifier = str_glue('E{experiment_no}__{`Mouse Group`}'))
 
@@ -225,13 +243,14 @@ plot_data <- all_raw %>%
     ))
   ) %>%
   # Remove any rows where time could not be parsed.
-  filter(!is.na(Time_h))
+  filter(!is.na(Time_h)) %>% 
+  mutate( experiment_no = factor( experiment_no))
 
 plot_data %>% write_csv('../data/R33_germ_free_data_for_plot.csv')
 ```
 
 
-## test the slope
+## slope for the growth trajectory
 
 ```{r}
 library(lme4)
@@ -290,7 +309,7 @@ CFU <- ggplot() +
             linewidth = 0.5, alpha = 0.4) +
             
   # Layer 2: Individual data points (now bigger).
-  geom_point(data = plot_data, aes(x = Time_h, y = `CFUs_per_GramStool`, color = Treatment),
+  geom_point(data = plot_data, aes(x = Time_h, y = `CFUs_per_GramStool`, color = Treatment, shape = experiment_no ),
              size = 3.5, alpha = 0.6) +
              
   # Layer 3: The median line (thicker and dashed).
@@ -318,6 +337,7 @@ CFU <- ggplot() +
     breaks = c(0, 4, 8, 24, 48, 144),
     labels = c("0", "4", "8", "24", "48", "144")
   ) +
+  scale_shape_manual(values = c("1" = 16, "2" = 18)) + # Circle and diamond 
   # Use a clean theme and add informative titles and labels.
   theme_bw(base_size = 14) +
   labs(
@@ -329,16 +349,21 @@ CFU <- ggplot() +
   
   # Customize the plot's appearance.
   theme(
-    legend.position = "none",
+    legend.position = "top",
     plot.title = element_text(face = "bold", hjust = 0.5),
     plot.subtitle = element_text(hjust = 0.5),
     axis.text.x = element_text(size = 9),
     strip.text = element_text(face = "bold", size = 12)
-  )
+  )+
+  
+  # This is the key part to remove the fill legend but keep the shape legend.
+  guides(color = "none", shape = 'none')
+CFU
 
-ggsave('../data/R33_gf_full_course_with_median.jpg', width = 10, height = 7)
+ggsave('../data/R33_gf_full_course_with_median_combined2.jpg', width = 10, height = 7)
 ```
 
+## zoom in on the 24 hour only  between the two conditions
 
 ```{r}
 # zoom in on the 24 hour only 
@@ -436,7 +461,7 @@ ggplot(summary_data, aes(x = Time_h, y = CFU, color = Treatment, linetype = Metr
 ggsave('../data/R33_gm_summaries_2.jpg', width = 10, height = 5)
 ```
 
-# the AUC test 
+# the AUC test    
 
 ```{r}
 library(DescTools) 
@@ -444,175 +469,132 @@ library(ggpubr)
 
 analysis_data <- plot_data %>%
   # First, filter for only the groups of interest (E. faecalis gavage).
-  filter(str_starts(`Mouse Group`, "1-") | str_starts(`Mouse Group`, "2-"))
+  filter(str_starts(`Mouse Group`, "1-") | str_starts(`Mouse Group`, "2-")) %>% 
+  mutate(mouse_identifier = str_glue('{experiment_no}__{`Mouse Group`}'))
 
 # Now, calculate the AUC for each mouse.
 # We group by mouse ID and treatment, then summarize to get one AUC value per mouse.
 auc_results <- analysis_data %>%
-  group_by(`Mouse Group`, Treatment) %>%
+  group_by(mouse_identifier, Treatment,experiment_no ) %>%
   summarize(
     # The AUC function from DescTools calculates the area under the curve.
     # We use the log-transformed CFU values for this calculation.
     auc_value = AUC(x = Time_h, y = log10_CFUs_per_GramStool),
     # The .groups = 'drop' argument cleans up the grouping structure afterward.
     .groups = 'drop'
+  ) %>%
+  # It's important to convert the grouping variables to factors for ANOVA.
+  mutate(
+    Treatment = as.factor(Treatment),
+    experiment_no = as.factor(experiment_no)
   )
 
+```
 
-# Finally, perform the Wilcoxon rank-sum test (Mann-Whitney U test).
-# This compares the distribution of AUC values between the two treatment groups.
-# It's ideal here because the sample size is small and we can't assume normality.
-statistical_test <- wilcox.test(auc_value ~ Treatment, data = auc_results)
+## test the AUC difference adjusting for the experiment number
+
+```{r}
+# Fit the two-way ANOVA model.
+# The formula `AUC ~ Treatment + experiment_no` tests for the main effects
+# of both Treatment and Experiment number.
+# You could also test for an interaction with `AUC ~ Treatment * experiment_no`.
+anova_model <- aov(auc_value ~ Treatment + experiment_no, data = auc_results)
+
+# Get the summary of the model, which includes the p-values for each factor.
+anova_summary <- summary(anova_model)
+
+# Print the summary to the console.
+print(anova_summary)
+
+# Look at the p-value (in the `Pr(>F)` column) for the 'Treatment' row.
+# p > 0.05: we do not have enough evidence to conclude that there is a
+#   significant difference between the treatment groups.
 
 
+
+# Extract the p-value for the 'Treatment' effect from the summary table.
+# The [1, 5] index gets the value from the first row, fifth column (`Pr(>F)`).
+p_value <- anova_summary[[1]]$`Pr(>F)`[1]
+
+# Format the p-value text for plotting, adding the asterisk.
+p_label <- paste0("p = ", format(p_value, digits = 2, nsmall = 2), "*")
+```
+
+## AUC panel
+
+```{r}
 # To visualize the result, a simple boxplot of the AUC values is helpful.
 auc_plot <- ggplot(auc_results, aes(x = Treatment, y = auc_value, fill = Treatment)) +
-  geom_boxplot(alpha = 0.7) +
-  geom_jitter(width = 0.35, size = 3) + 
-  # This function from ggpubr runs the test and adds the p-value to the plot.
-  stat_compare_means(
-    method = "wilcox.test", 
-    comparisons = list(c("E. faecalis + Sucrose Water", "E. faecalis + Regular Water")),
-    label = "p.format" # Displays the p-value in a standard format.
+  geom_boxplot(alpha = 0.7,  outlier.shape = NA) +
+  geom_jitter(width = 0.35, size = 3, aes(shape = experiment_no)) + 
+  # Manually add the p-value annotation.
+  annotate(
+    "text",
+    x = 1.5, y = max(auc_results$auc_value) + 50, # Position the text
+    label = p_label,
+    size = 5,
+    fontface = "bold"
   ) +
+    # Add a bracket to show which groups are being compared.
+  annotate(
+    "segment",
+    x = 1, xend = 2, y = max(auc_results$auc_value) + 30, yend = max(auc_results$auc_value) + 30,
+    linewidth = 0.8
+  ) +
+  scale_shape_manual(values = c("1" = 16, "2" = 18)) + # Circle and diamond 
   labs(
     #title = "Comparison of Total Bacterial Load (AUC)",
-    x = "Treatment Group",
-    y = "Area Under Curve\nlog10(CFU/g) * hours"
+    x = "",
+    y = "Area Under Curve\nlog10(CFU/g) * hours",
+    shape = "Experiment", # This will be the title for the shape legend.
+    caption = "*p-value from two-way ANOVA adjusting for experiment number"
   ) +
-  theme_classic(base_size = 14) +
-  theme(legend.position = "none")
+  theme_classic(base_size = 11) +
+  theme(legend.position = "bottom", plot.caption = element_text(hjust = 0, face = "italic"))+
+  
+  # This is the key part to remove the fill legend but keep the shape legend.
+  guides(fill = "none", shape = 'none')
 
 auc_plot
 ```
 
 
-# GF repeat
 
 ```{r}
-repeat_data <- read_csv("../data/8_13_25_germ_free_faecalis_gavage_repeat - sheet1.csv") %>% 
-  mutate(CFUs_per_GramStool = (((((Colonies_counted*(100/Plated_volume_ul))/100)/(10^Dilution_factor) )*1000)/Stool_weight_mg)+1)  %>%
-  #clean_names() %>%
-  mutate(log10_CFUs_per_GramStool = log10(CFUs_per_GramStool)) 
+# interactive model test
+anova_model_interaction <- aov(auc_value ~ Treatment * experiment_no, data = auc_results)
 
-plot_data <- repeat_data %>%
-  # Use mutate to create new, cleaner columns.
-  mutate(
-    # Convert the 'Time Point' text into a numerical hour for the x-axis.
-    Time_h = case_when(
-      `Time Point` == "4h post gavage" ~ 4,
-      `Time Point` == "8h post gavage" ~ 8,
-      `Time Point` == "24h post gavage" ~ 24,
-      `Time Point` == "48h post gavage" ~ 48,
-      `Time Point` == "144h post gavage" ~ 144
-    ),
-    # Create descriptive labels for the four treatment groups.
-    Treatment = case_when(
-      str_starts(`Mouse Group`, "1-") ~ "E. faecalis + Sucrose Water",
-      str_starts(`Mouse Group`, "2-") ~ "E. faecalis + Regular Water"
-    ),
-    # Ensure the treatment groups are ordered correctly in the plot panels.
-    Treatment = factor(Treatment, levels = c(
-      "E. faecalis + Sucrose Water", "E. faecalis + Regular Water"
-    ))
-  ) %>%
-  # Remove any rows where time could not be parsed.
-  filter(!is.na(Time_h))
+# Get the summary of the model, which includes the p-values for each factor.
+anova_summary_interaction <- summary(anova_model_interaction)
 
-median_data <- plot_data %>%
-  group_by(Treatment, Time_h) %>%
-  summarize(median_CFU = median(`CFUs_per_GramStool`, na.rm = TRUE), .groups = 'drop')
-
-# Create the improved plot.
-CFU <- ggplot() +
-  # Layer 1: Individual mouse trajectories (now thinner and more transparent).
-  geom_line(data = plot_data, aes(x = Time_h, y = `CFUs_per_GramStool`, group = `Mouse Group`, color = Treatment),
-            linewidth = 0.5, alpha = 0.4) +
-            
-  # Layer 2: Individual data points (now bigger).
-  geom_point(data = plot_data, aes(x = Time_h, y = `CFUs_per_GramStool`, color = Treatment),
-             size = 3.5, alpha = 0.6) +
-             
-  # Layer 3: The median line (thicker and dashed).
-  geom_line(data = median_data, aes(x = Time_h, y = median_CFU, color = Treatment),
-            linetype = "dashed", linewidth = 1.2) +
-            
-  # Facet_wrap creates separate panels for each treatment group.
-  facet_wrap(~Treatment) +
-  
-  # Set the Y axis to a log10 scale and format the labels as 10^x.
-  scale_y_log10(
-    breaks = trans_breaks("log10", function(x) 10^x),
-    labels = trans_format("log10", math_format(10^.x)),
-    limits = c(1, NA) # Start the axis at 1 (log10=0).
-  ) +
-  
-  # Manually set the colors to match the previous plot.
-  scale_color_manual(values = c(
-    "E. faecalis + Sucrose Water" = "#F8766D", # Reddish-Pink
-    "PBS + Sucrose Water" = "#F8766D",
-    "E. faecalis + Regular Water" = "#00BFC4", # Teal/Cyan
-    "PBS + Regular Water" = "#00BFC4"
-  )) +
-  #   scale_x_continuous(
-  #   breaks = c(0, 4, 8, 24, 48, 144),
-  #   labels = c("0", "4", "8", "24", "48", "144")
-  # ) +
-      scale_x_continuous(
-    breaks = c(0, 4, 8, 24, 48),
-    labels = c("0", "4", "8", "24", "48")
-  ) +
-  # Use a clean theme and add informative titles and labels.
-  theme_bw(base_size = 14) +
-  labs(
-    #title = "Bacterial Colonization Timeline in Germ-Free Mice",
-    #subtitle = "Individual mouse trajectories with group medians",
-    x = "Time Post-Gavage (Hours)",
-    y = "CFU / gram of feces"
-  ) +
-  
-  # Customize the plot's appearance.
-  theme(
-    legend.position = "none",
-    plot.title = element_text(face = "bold", hjust = 0.5),
-    plot.subtitle = element_text(hjust = 0.5),
-    axis.text.x = element_text(size = 9),
-    strip.text = element_text(face = "bold", size = 12)
-  )
-
-ggsave('../data/R33_gf_full_course_with_median_REPEAT.jpg', width = 10, height = 7)
+# the interaction term (Treatment:experiment_no) is actually testing: "Did the effect of sucrose water depend on which experiment it was in?"
+# not the question I am interested in but it is good to confirm that whatever effect (or lack of effect) the sucrose had, it was the same in both of your independent experiments. This demonstrates that your experimental system is reproducible.
+# Because the interaction is not significant, it is statistically valid to remove that term from the model and look at the simpler "main effects" model (which is what you had before). This gives you more power to detect a true effect of the Treatment itself.
 ```
-
-
 
 # assemble 
 
 ```{r}
 # --- 4. Stack All Three Plots Vertically (A, B, C) ---
-# Using the '/' operator from patchwork stacks plots vertically.
-# We can also control the relative heights and add tags.
-final_plot <- design / CFU / auc_plot +
-  plot_layout(heights = c(1, 2, 1.5), guides = "collect") + # Adjust heights for balance
-  plot_annotation(
-    #title = "Full Model of Microbiome Disruption",
-    tag_levels = 'A' # Automatically label plots A, B, C
-  ) &
-  theme(plot.tag = element_text(size = 18, face = "bold"))
 
-library(cowplot)
+final_plot <-  plot_grid( design , CFU , auc_plot,
+                 label_size = 12, nrow  =3,
+                 rel_heights = c(1.2,2,1.8),labels = "auto", 
+                align = 'vh', axis = 'lrtb')
+
+
 title <- ggdraw() + 
   draw_label("Rebuttal Fig X",fontface = 'bold',x = 0,hjust = 0) +
-  theme(plot.margin = margin(0, 0, 0, 3))
+  theme(plot.margin = margin(0, 0, 0, 0))
 
 combined <- plot_grid(
   title, final_plot,
   ncol = 1,
   # rel_heights values control vertical title margins
-  rel_heights = c(0.1, 1)
+  rel_heights = c(0.05, 1)
 ) +theme(plot.margin = unit(c(1,1,1,1), "cm"))
 
 ggsave('../data/R33_germ_free_mouse.pdf',
       width = 8.5, height = 11, units = "in", device = 'pdf', 
       dpi = 300)  
 ```
-
